[gd_scene load_steps=10 format=3 uid="uid://ofko1ir57eo5"]

[ext_resource type="Script" uid="uid://cijetf7r5hvri" path="res://Scripts/tableroIA_prueba3.gd" id="1_uyneq"]
[ext_resource type="PackedScene" uid="uid://6hmvo400iucc" path="res://Scenes/ranura_prueba.tscn" id="2_71r00"]
[ext_resource type="PackedScene" uid="uid://bvtjofq7sewju" path="res://Scenes/baraja2_prueba.tscn" id="3_uyneq"]
[ext_resource type="PackedScene" uid="uid://cno44aedfwjf5" path="res://Scenes/barajaIA2_prueba.tscn" id="4_71r00"]
[ext_resource type="PackedScene" uid="uid://gy7fak3jv1tm" path="res://Scenes/generador_prueba.tscn" id="4_f4eja"]
[ext_resource type="PackedScene" uid="uid://gh77jmcl3jn3" path="res://Scenes/generadorIA_prueba.tscn" id="5_71r00"]
[ext_resource type="PackedScene" uid="uid://cnmwp17nxpirv" path="res://Scenes/energia_prueba.tscn" id="5_l714s"]
[ext_resource type="PackedScene" uid="uid://cfi6eogp3e0rc" path="res://Scenes/ranura_era_prueba.tscn" id="8_f784s"]
[ext_resource type="PackedScene" uid="uid://dpsgwpldyxgu5" path="res://Scenes/energiaIA_prueba.tscn" id="9_mxcb6"]

[node name="tablero" type="Node2D"]
script = ExtResource("1_uyneq")

[node name="ranura_era_prueba" parent="." instance=ExtResource("8_f784s")]
position = Vector2(434, 332)
rotation = -1.5708

[node name="jugador" type="Node2D" parent="."]

[node name="ranuras" type="Node2D" parent="jugador"]

[node name="ranura_prueba" parent="jugador/ranuras" instance=ExtResource("2_71r00")]
position = Vector2(251, 355)

[node name="ranura_prueba2" parent="jugador/ranuras" instance=ExtResource("2_71r00")]
position = Vector2(445, 352)

[node name="ranura_prueba3" parent="jugador/ranuras" instance=ExtResource("2_71r00")]
position = Vector2(634, 349)

[node name="ranura_descarte" parent="jugador" instance=ExtResource("2_71r00")]
position = Vector2(819, 49)

[node name="mano" type="Node2D" parent="jugador"]
position = Vector2(480, 520)

[node name="baraja" parent="jugador" instance=ExtResource("3_uyneq")]
position = Vector2(865, 316)

[node name="cartas_en_juego" type="Node2D" parent="jugador"]

[node name="Panel" type="Panel" parent="jugador"]
offset_left = 819.0
offset_top = 48.0
offset_right = 917.0
offset_bottom = 171.0
metadata/_edit_use_anchors_ = true

[node name="generador" parent="jugador" instance=ExtResource("4_f4eja")]
offset_left = 745.0
offset_top = 417.0
offset_right = 745.0
offset_bottom = 417.0

[node name="Energia" parent="jugador" instance=ExtResource("5_l714s")]
offset_left = 178.0
offset_top = 385.0
offset_right = 178.0
offset_bottom = 385.0

[node name="IA" type="Node2D" parent="."]

[node name="ranuras" type="Node2D" parent="IA"]

[node name="ranura_prueba" parent="IA/ranuras" instance=ExtResource("2_71r00")]
position = Vector2(252, 91)

[node name="ranura_prueba2" parent="IA/ranuras" instance=ExtResource("2_71r00")]
position = Vector2(445, 90)

[node name="ranura_prueba3" parent="IA/ranuras" instance=ExtResource("2_71r00")]
position = Vector2(634, 80)

[node name="ranura_descarte" parent="IA" instance=ExtResource("2_71r00")]
position = Vector2(59, 437)

[node name="mano" type="Node2D" parent="IA"]
position = Vector2(506, 32)

[node name="barajaIA" parent="IA" instance=ExtResource("4_71r00")]
position = Vector2(66, 40)

[node name="cartas_en_juego" type="Node2D" parent="IA"]

[node name="Panel" type="Panel" parent="IA"]
offset_left = 59.0
offset_top = 435.0
offset_right = 157.0
offset_bottom = 558.0
metadata/_edit_use_anchors_ = true

[node name="generadorIA" parent="IA" instance=ExtResource("5_71r00")]
offset_left = 147.0
offset_top = 94.0
offset_right = 147.0
offset_bottom = 94.0

[node name="EnergiaIA" parent="IA" instance=ExtResource("9_mxcb6")]
offset_left = 762.0
offset_top = 35.0
offset_right = 762.0
offset_bottom = 35.0

[node name="Button" type="Button" parent="IA"]
offset_left = 148.0
offset_top = 97.0
offset_right = 277.0
offset_bottom = 220.0

[node name="Finaliza" type="Button" parent="."]
offset_left = 856.0
offset_top = 550.0
offset_right = 1005.0
offset_bottom = 586.0
theme_override_font_sizes/font_size = 20
text = "Finalizar turno"

[node name="turnos" type="Label" parent="."]
offset_left = 361.0
offset_top = 224.0
offset_right = 656.0
offset_bottom = 334.0
theme_override_colors/font_color = Color(0.587191, 0.102029, 0.907531, 1)
theme_override_colors/font_shadow_color = Color(0.854902, 0.231373, 0.184314, 1)
theme_override_font_sizes/font_size = 80
text = "Turno x"

[node name="due√±o" type="Label" parent="."]
offset_left = 378.0
offset_top = 311.0
offset_right = 658.0
offset_bottom = 366.0
theme_override_colors/font_color = Color(0.587191, 0.102029, 0.907531, 1)
theme_override_colors/font_shadow_color = Color(0.854902, 0.231373, 0.184314, 1)
theme_override_font_sizes/font_size = 40
text = "Jugador"

[node name="reinicio" type="Button" parent="."]
offset_left = 4.0
offset_top = 295.0
offset_right = 161.0
offset_bottom = 331.0
theme_override_font_sizes/font_size = 20
text = "Reiniciar cartas"

[connection signal="pressed" from="IA/Button" to="." method="_on_AIgenerator_pressed"]
[connection signal="pressed" from="Finaliza" to="." method="_on_finish_turn_btn_pressed"]
[connection signal="pressed" from="reinicio" to="." method="_on_reset_btn_pressed"]
